<resources>
    <string name="app_name">WeatherApp</string>
    <string name="moscow">Moscow</string>
    <string name="temperature" translatable="false">+26°</string>
    <string name="condition">Mostly sunny</string>
    <string name="feeling">Feels like:</string>
    <string name="feeling_temperature" translatable="false">+30°</string>
    <string name="city_selection">City selection</string>
    <string name="prompt_text">Enter the name of the city</string>
    <string name="preferences_header">Preferences</string>
    <string name="dark_theme">Dark theme</string>
    <string name="temperature_units">Temperature in F°</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="exit_or_not">Exit?</string>
    <string name="yes_exit">Yes</string>
    <string name="developer_info">Developer info</string>
    <string name="developer_info_disclaimer">For thirty years and three years, Ilya Muromets lay on the stove. Russia did not know such a feat of self-isolation.</string>
    <string name="error_msg_city_not_found">City not found</string>
    <string name="error_msg_no_connection">No connection</string>
    <string name="error_msg_unknown">Unknown error</string>
    <string name="common_ok" translatable="false">OK</string>
    <string name="search">Search</string>
    <string name="no">No</string>
    <string name="custom_text">This is my custom textView for example.</string>
    <string name="weather_is_here">The weather is here</string>
    <string name="show_weather">Show weather</string>
    <string name="pro_version">Geolocation weather is available in the PRO version</string>

</resources>
